# ex05

./: CMakeLists.txt  makefile  settingsClient.txt  settingsServer.txt
etc/: info.txt
exe/: client_exe  server_exe  settingsClient.txt  settingsServer.txt
src/client/: Client.cpp  Client.h  mainClient.cpp
src/client/reversi/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  Cell.cpp  Cell.h  ConsolePrinter.cpp  ConsolePrinter.h  GameManager.cpp  GameManager.h  GameRules.h  GameState.cpp  GenralDef.h  HumanPlayer.cpp  HumanPlayer.h  Player.h  Point.h  Printer.h  RemoteGameManager.cpp  RemoteGameManager.h  ReversiDefaultRules.cpp  ReversiDefaultRules.h
src/server/: HandleClient.cpp  HandleClient.h  HandleGame.cpp  HandleGame.h  RoomsHandler.cpp  RoomsHandler.h  Server.cpp  Server.h  StringHandler.cpp  StringHandler.h  Task.h  ThreadPool.cpp  ThreadPool.h  mainServer.cpp
src/server/Commands/: CloseCommand.cpp  CloseCommand.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  JoinCommand.cpp  JoinCommand.h  ListCommand.cpp  ListCommand.h  PlayCommand.cpp  PlayCommand.h  StartCommand.cpp  StartCommand.h
src/test/: StringHandlerTest.cpp  roomsHandlerTest.cpp
